# predictor_ingest

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  calendar.ics  package-lock.json  package.json  plan.md  pyproject.toml  semiconductor-fusion-reminder.ics
calendar/: 2026-03-18.ics  2026-03-18.md
config/: feeds.yaml  source_changelog.yaml
docs/: GLOSSARY.md  Google Gemini2.html  UI_GUIDELINES.md  backlog.md  blog-topics.md  calibration-review-2026-04-02.ics  extraction-quality-notes.md  llm-selection.md  project-plan.md  source-selection-strategy.md  tasks-2026-03-25.ics  tasks-2026-03-26.ics  tasks-2026-03-28.ics  test-plan.md
schemas/: domain-profile.json  extraction.json  movers.json  sqlite.sql
scripts/: backfill_analytics.py  benchmark_cheap_model.py  build_docpack.py  check_domain_health.py  check_staleness.py  collect_batch.py  collect_diagnostics.py  collect_diagnostics.sh  collect_metrics_gist.sh  compare_normalization.py  deploy.sh  diagnose_feeds.py  export_ontology.py  generate_dashboard_json.py  generate_normalization.py  generate_sample_data.py  health_report.py  import_extractions.py  init_db.py  migrate_batch_api.py  migrate_data_dirs.py  repair_data.py  reset_data.py  run_calibration_report.py  run_export.py  run_extract.py  run_infer.py  run_movers.py  run_network_tests.py  run_pipeline.py  run_resolve.py  run_synthesize.py  run_trending.py  shadow_report.py  submit_backlog.py  submit_batch.py  test_feeds.sh  test_normalization_coverage.py  wipe_domain_data.py
tests/: __init__.py  test_build_docpack.py  (+27 more)
(+260 files in other folders)
