[project]
name = "predictor_ingest"
version = "0.1.0"
description = "AI trend graph ingestion pipeline"
requires-python = ">=3.10"
dependencies = [
  "feedparser>=6.0.11",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.3",
  "pyyaml>=6.0.1",
  "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
ingest-rss = "ingest.rss:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "network: marks tests as requiring network access (deselect with '-m \"not network\"')",
    "llm_live: marks tests that call real LLM APIs (requires API keys in env)",
]
